--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Provab techsoft</string>
     <string name="add">Add</string>
+    <string name="olderString">Older String</string>
+    <string name="recentString">Recent String</string>
 </resources>
